2013-09-20  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/PointsToolbox/pca_align.m: (0.1.0)
	* matlab/PointsToolbox/pca_normalize.m: (0.1.1)

	- Move the part of the code in pca_normalize() that aligns the
	point set principal components with the Cartesian axes to new
	function pca_align(), so that we can use it without having to
	normalize the points too.

	* Add matlab/FileFormatToolbox/parsave.m: (0.1.0)

	- parsave Save workspace variables to file within a parfor loop.

2013-09-19  Ramon Casero  <rcasero@gmail.com>

	* matlab/CgalToolbox/CgalCheckSelfIntersect.cpp: (0.3.1)

	- Fix bug. If the triangle is degenerated, trying to find
	intersections produced a segfault. To avoid it, we just count one
	intersection for this triangle and skip to the next one.

	- To avoid potential pointer problems, the output with the count
	of intersections is now accessed as n[idx] += 1; instead of *n +=
	1; n++.

2013-09-17  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/dmatrix_mesh.m: (0.3.0)

	- Add Fast Marching method. Gabriel Peyre’s implementation of
	Kimmel and Sethian (1998), that uses Fibonacci heaps implemented
	by John-Mark Gurney.

	- Fast Marching is ~2 times slower than Dijkstra's algorithm, but
	it suffers a lot less from metrication errors on structured
	regular meshes.

2013-09-13  Ramon Casero  <rcasero@gmail.com>

	* matlab/VectorWrapper.h: (0.6.0)
	* matlab/VectorWrapper.hxx: (0.5.0)

	- API change to fix bug. Remove template VectorSize. It is not
	used anyway by methods in the class, and it was creating a problem
	with MatlabImportFilter. In paticular,
	MatlabImportFilter::ReadVectorOfVectorsFromMatlab does not take a
	VectorSize template argument. So when it instantiated a
	VectorWrapper, it did so without the VectorSize argument, which
	means that by default VectorSize=0, which then made some partial
	specializations in VectorWrapper.h fail. For example,
	VectorType=itk::Size<3> but VectorSize=0.
